feat: Chrome extension loading fix and session-level extension isolation
🐛 Fixed Chrome Extension Loading Bug (v0.0.38):
- Fixed critical bug where config file --load-extension arguments were overridden by MCP extension management
- Enhanced enhanceLaunchOptionsWithExtensions to merge existing and MCP-managed extension paths
- Added extension path deduplication and improved debug logging
- Config file extensions now load correctly alongside MCP-managed extensions

🏠 Session-Level Extension Isolation (v0.0.39):
- Complete redesign of Chrome extension storage to follow project isolation principles
- Extensions now stored in <session-dir>/extensions/ instead of global ~/.mcp-extensions/
- Each session maintains its own extension registry for complete isolation
- Added project isolation parameters to all extension management tools
- Extension data stored alongside browser session data for logical grouping
- Easy cleanup: deleting session directory removes all associated extensions
- Maintained full backward compatibility for non-project-isolated usage

🧩 Chrome Extension Management System:
- Added comprehensive Chrome extension management with browser_extension_install, browser_extension_list, browser_extension_uninstall tools
- Automatic browser restart for immediate extension availability
- Extension metadata extraction and registry management
- Support for Chrome Web Store URL and extension ID installation methods

📋 Additional Improvements:
- Updated documentation with comprehensive extension management examples
- Enhanced error handling and validation for extension operations
- Improved user experience with clear session vs global storage messaging
- Added CHANGELOG.md for better version tracking

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ai-coding-labs/playwright-mcp-plus",
-  "version": "0.0.36",
+  "version": "0.0.39",
   "description": "Enhanced Playwright Tools for MCP with Project Session Isolation",
   "type": "module",
   "repository": {
@@ -21,7 +21,10 @@
     "model-context-protocol",
     "browser-automation",
     "project-isolation",
-    "session-management"
+    "session-management",
+    "chrome-extensions",
+    "extension-management",
+    "browser-extensions"
   ],
   "scripts": {
     "build": "tsc",
@@ -47,6 +50,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.16.0",
     "commander": "^13.1.0",
+    "crx-util": "^1.0.0",
     "debug": "^4.4.1",
     "dotenv": "^17.2.0",
     "mime": "^4.0.7",
