chore: 添加日志文件忽略规则
- 忽略所有 .log, .out, .err 文件
- 忽略 server.log 和 nohup.out
- 防止测试和运行时生成的日志文件被提交

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,12 @@ playwright-report/
 .env
 sessions/
 
+# Log files
+*.log
+*.out
+*.err
+server.log
+nohup.out
+
 # Playwright MCP session data (auto-generated)
 .user-session-data-directory/
